Deploy/deployment.yaml
# web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb-api
  name: mongodb-api
spec:
  selector:
    matchLabels:
      app: mongodb-api
  minReadySeconds: 60
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb-api
    spec:
      containers:
      - image: hamtaro702/test:17
        name: mongodb-api
        ports:
        - containerPort: 8000
          protocol: TCP
      terminationGracePeriodSeconds: 90
