Deploy/ingress.yaml
# internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-api-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
# spec:
#   defaultBackend:
#     service:
#       name: mongodb-api-svc
#       port:
#         number: 80
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mongodb-api-svc
            port:
              number: 80
